--- a/Unit_and_Integration_Task_B/js_calculator_start_point/package.json
+++ b/Unit_and_Integration_Task_B/js_calculator_start_point/package.json
@@ -15,6 +15,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "express": "^4.14.0",
+    "growl": "^1.10.5",
     "mocha": "^3.1.2",
     "protractor": "^4.0.10",
     "webdriver-manager": "^10.2.7"
